# life

./: .eslintrc.cjs  .prettierrc.json  README.md  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: life-ci.yaml  vue.yaml
assets/: index-03719d2a.js  index-03bc83df.js  index-05a1ace2.css  index-08f80c1b.js  index-0d9f3007.css  index-2c885dee.css  index-2df870dc.js  index-34402361.js  index-35c2f0a9.js  index-37d01e60.js  index-3c683af8.js  index-3fd7ebed.js  index-44ddb1f0.js  index-47e10da8.js  index-63c0fbad.css  index-77954462.js  index-8bfc639f.js  index-9a230646.js  index-9fb69898.css  index-BeYQvDIF.js  index-abd35093.css  index-bda52f8f.css  index-c2ab8ecd.js  index-c8ce45b9.css  index-c9859afd.js  index-dc314838.css  index-e7c825ce.js  index-f1cda429.js  index-f3f831d4.css  index-f69368b3.js  index-fb97705b.js
python/: main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
src/: App.vue  main.js
src/app/: App.vue  index.js
src/assets/css/: index.css  main.css  reset.css  variable.css
src/components/: index.js
src/components/AppCell/: AppCell.vue  index.js
src/components/AppFooter/: AppFooter.vue  index.js
src/components/AppGrid/: AppGrid.vue  index.js
src/components/AppHeader/: index.js
src/stores/: controller.js  grid-controller.js  index.js
tests/unit/: hello.spec.ts
(+7 files in other folders)
